--- a/styles/library.css
+++ b/styles/library.css
@@ -57,7 +57,7 @@
   border: 1px solid #eb6123;
   padding: 14px;
   background-color: rgba(17, 17, 17, 0.3);
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
   transition: all 0.2s ease;
   border-radius: 0;
   min-height: 80px;
@@ -147,7 +147,7 @@
   margin-bottom: 40px;
   padding: 30px;
   background-color: rgba(17, 17, 17, 0.3);
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
   border: 1px solid #eb6123;
   border-radius: 8px;
 }
