--- a/styles/megathread.css
+++ b/styles/megathread.css
@@ -123,7 +123,7 @@ h2::before {
 .link-item {
   padding: 8px 12px;
   background-color: rgba(17, 17, 17, 0.4);
-  backdrop-filter: blur(12px);
+  backdrop-filter: blur(15px);
   border: 1px solid #444;
   border-radius: 4px;
   transition: all 0.2s;
@@ -146,7 +146,7 @@ h2::before {
   padding: 30px;
   background-color: rgba(17, 17, 17, 0.3);
   border-top: 1px solid #444;
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
   border: 1px solid #eb6123;
   border-radius: 8px;
   padding: 20px;
